fix: get one order
